force-app/main/default/objects/Associated_Panel__c/Associated_Panel__c.object-meta.xml
<CustomObject>
    <label>Associated Panel</label>
    <nameField>
        <label>Associated Panel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Associated Panels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>