force-app/main/default/objects/Associated_Panel__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Associated Panels</relationshipLabel>
    <relationshipName>Associated_Panels</relationshipName>
    <type>Lookup</type>
</CustomField>