force-app/main/default/objects/Associated_Panel__c/fields/Name_of_the_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Speaker__c</fullName>
    <inlineHelpText>Name of the Speaker who spoke on this panel.</inlineHelpText>
    <label>Name of the Speaker</label>
    <length>100</length>
    <type>Text</type>
</CustomField>