force-app/main/default/objects/Associated_Panel__c/fields/Panel__c.field-meta.xml
<CustomField>
    <fullName>Panel__c</fullName>
    <inlineHelpText>Name of the panel. This field has a Master detail relationship and should update automatically.</inlineHelpText>
    <label>Panel</label>
    <referenceTo>Panel__c</referenceTo>
    <relationshipLabel>Associated Panels</relationshipLabel>
    <relationshipName>Associated_Panels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>